# donkey-ddns

./: .gitignore  README.md  REUSE.toml  pyproject.toml  sample-config.toml
src/donkey/: config.py  hetzner_dns_client.py  main.py  util.py
